
ACLOCAL_AMFLAGS = -I build


SUBDIRS = \
	multiprocess_c \
	reading_logs_with_offset \
	reading_logs_via_rule_message \
	simple_example_using_c \
	using_bodies_in_chunks

pkginclude_HEADERS = \
	reading_logs_via_rule_message/reading_logs_via_rule_message.h

# make clean
CLEANFILES = 

# make maintainer-clean
MAINTAINERCLEANFILES = \
	Makefile.in

