
noinst_LTLIBRARIES = libinjection.la
libinjection_la_SOURCES = \
	libinjection/src/libinjection_html5.c \
    libinjection/src/libinjection_sqli.c \
    libinjection/src/libinjection_xss.c

noinst_HEADERS = libinjection/src/libinjection.h \
       libinjection/src/libinjection_html5.h \
       libinjection/src/libinjection_sqli.h \
       libinjection/src/libinjection_sqli_data.h \
       libinjection/src/libinjection_xss.h
